--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
-  "dependencies": {
-    "postcss-preset-env": "^6.3.0"
-  },
   "name": "image-blur",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/donggyushin/image-blur.git",
   "author": "rontend",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "postcss-preset-env": "^6.3.0"
+  },
+  "scripts": {
+    "dev": "parcel src/index.htm"
+  },
+  "postcss":{
+    "plugins":{
+      "postcss-preset-env":{
+        "stage":0
+      }
+    }
+  }
 }
